lab1/Test/L1-A-5-24.output
Error Type B at Line 3
Error Type B at Line 5
Error Type A at Line 5
Error Type B at Line 6
Error Type B at Line 9
Error Type A at Line 10
Error Type A at Line 11
Error Type A at Line 11
