lab1/Test/L1-A-5-24.cmm
struct hBciT wTg5dEEi ( int MiqLcwQhv0HMi , int JNHxAIf8bPUP 
  ) {
  int _9mAt = ;
  float XP_0o3fuwi5 
  if ( kC1mjFz )   YDcOr2Sjr3fY ~;
else   if ZihG8lLe )   i7JyTPOBSOmO 


}
float #;
``